--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,7 @@
   "author": "Harry Nicholls <harry.m.nicholls@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "request-promise": "^4.2.2"
   },
